--- a/Landing-Page/css/section/header.css
+++ b/Landing-Page/css/section/header.css
@@ -23,13 +23,13 @@ ol{
     display:flex;
     padding:10px;
 }
-a{
+.header-a{
     padding:5px 20px;
     text-decoration: none;
     font-weight:100px;
     color:white;
 }
-a:hover {
+.header-a:hover {
     color: #000000ff;
     background-color: #00000019;
    }
@@ -179,7 +179,7 @@ a:hover {
    display:flex;
    justify-content:center;
 }
-   img{
+.image-shop{
     width:70%;
     border-radius:13px 13px 0px 0px;
    }
