--- a/Todo-app/style.css
+++ b/Todo-app/style.css
@@ -149,3 +149,20 @@
     pointer-events: none;
   }
   
+  /*media-querys*/
+  @media screen and (max-width: 670px){
+
+    .select{
+      position:absolute;
+      top:33%;
+      height:50px;
+      border-radius:20px;
+     
+    }
+    .filter-todo{
+      font-size:1rem;
+    }
+    .todo-input,.todo-button{
+      max-width:50%;
+    }
+}
